@@ -1,3 +1,11 @@
+2006-03-21  Jason Merrill  <jason@redhat.com>
+
+	PR middle-end/20297
+	* expr.c (init_block_move_fn): Force default visibility.
+	(init_block_clear_fn): Likewise.
+	* builtins.c (expand_builtin_fork_or_exec): Likewise.
+	* targhooks.c (default_external_stack_protect_fail): Likewise.
+
 2006-03-16  David Edelsohn  <edelsohn@gnu.org>
 
 	Backport from mainline.
